--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,6 +146,29 @@ body {
   font-size: 1.6rem;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.ex-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20rem;
+}
+.ex-container__item {
+  border: 1px solid #ccc;
+  width: 20%;
+  text-align: center;
+  cursor: pointer;
+}
+.ex-container__item a {
+  display: block;
+  padding: 3rem 0.5rem;
+}
+
 .live-code {
   min-height: 776px;
   background-color: #333;
